updates for GA of Verified ID

--- a/1-java-api-idtokenhint/src/main/resources/static/issuer.html
+++ b/1-java-api-idtokenhint/src/main/resources/static/issuer.html
@@ -78,21 +78,22 @@
                                     // QR Code scanned, show pincode if pincode is required
                                     if (respMsg.status == 'request_retrieved') {
                                         document.getElementById('message-wrapper').style.display = "block";
+                                        document.getElementById("qrcode").getElementsByTagName("img")[0].style.opacity = "0.1";
                                         document.getElementById('qrText').style.display = "none";
-                                        document.getElementById('qrcode').style.display = "none";
                                         if (respMsg.pin) {
                                             document.getElementById('pinCodeText').style.display = "visible";
                                         }
                                         document.getElementById('message').innerHTML = respMsg.message;
                                     }
                                     if (respMsg.status == 'issuance_successful') {
+                                        document.getElementById('qrcode').style.display = "none";
                                         document.getElementById('pinCodeText').style.display = "none";
                                         document.getElementById('message').innerHTML = respMsg.message;
                                         clearInterval(checkStatus);
                                     }
                                     if (respMsg.status == 'issuance_failed') {
+                                        document.getElementById('qrcode').style.display = "none";
                                         document.getElementById('pinCodeText').style.display = "none";
-                                        //document.getElementById('message').innerHTML = respMsg.message;
                                         document.getElementById('message').innerHTML = "Issuance error occured, did you enter the wrong pincode? Please refresh the page and try again.";
                                         document.getElementById('payload').innerHTML = "Payload: " + respMsg.payload;
                                         clearInterval(checkStatus);
